--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -127,7 +127,7 @@
     ul {
       @include mixins.flex(flex, space-around, center);
       flex-direction: row;
-      gap: 15px;
+      gap: 20px;
       margin: auto auto;
     }
   }
@@ -142,10 +142,15 @@
 }
 
 @media (min-width: 768px) {
+  .header {
+    padding: 29.14px 20px 31.33px 20px;
+    min-height: 102px;
+  }
+
   .nav_header {
     ul {
       @include mixins.flex(flex, space-around, center);
-      gap: 30px;
+      gap: 21px;
     }
   }
   .link {
@@ -155,9 +160,26 @@
 
 @media (min-width: 992px) {
   .header {
-    padding: 29.14px 0px 31.33px 12px;
+    padding: 29.14px 35px 31.33px 57px;
     min-height: 102px;
   }
+  .nav_header {
+    ul {
+      gap: 40px;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .header {
+    padding: 29.14px 32px 31.33px 74px;
+  }
+
+  .wrapper {
+    @include mixins.flex(flex, space-between, center);
+    gap: 0;
+  }
+
   .nav_header {
     ul {
       gap: 60px;
@@ -165,9 +187,15 @@
   }
 }
 
+
 @media (min-width: 1400px) {
   .header {
-    padding: 29.14px 98px 31.33px 135px;
+    padding: 29.14px 210px 31.33px 135px;
+  }
+
+  .wrapper {
+    @include mixins.flex(flex, space-between, center);
+    gap: 0;
   }
 }
 
