--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,9 +1,14 @@
 $logo-width: 68.552px;
 $logo-height: 41.527px;
+$font-size100: 100px;
+$font-size200: 200px;
 $font-size64: 64px;
+$font-size50: 50px;
+$font-size40: 40px;
 $font-size12: 12px;
 $font-size16: 16px;
 $font-size22: 22px;
+$font-size24: 24px;
 $font-size10: 10px;
 $font-size11: 11px;
 $font-size: 14px;
@@ -25,3 +30,11 @@ $letterSpacing: 2.4px;
 $letter-spacing-check: 0.42px;
 $button-color-backg: #FFF;
 $line-height-main-task: 36px;
+$line-height: 64px;
+$line-height25: 25px;
+$z-index: 3;
+$margin-bottom: 40px;
+$margin-bottom1200: 90px;
+$border-radius: 0;
+$slide-height: 500px;
+$slide-height1200: 650px;
