fix: section task

--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -82,6 +82,7 @@
   letter-spacing: variables.$letterSpacing;
   text-transform: uppercase;
   margin: 0 auto;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
