--- a/components/task/task.module.scss
+++ b/components/task/task.module.scss
@@ -41,22 +41,24 @@
   text-align: center;
  }
 
- @media (min-width: 768px) {
+
+ @media (min-width: 576px) {
   .task {
-    padding: 40px 20px 20px 20px;
+    padding: 20px 5px 20px 5px;
   }
   
   .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     row-gap: 0px;
     column-gap: 20px;
   } 
+  
  }
 
  @media (min-width: 768px) {
   .task {
-    padding: 40px 35px 20px 57px;
+    padding: 40px 20px 20px 20px
   }
 
   .wrapper {
@@ -82,7 +84,17 @@
   .number {
     line-height: 90px;
   }
+
+  .text {
+    text-align: left;
+   }
  }
+
+@media(min-width: 992px) {
+  .task {
+    padding: 60px 35px 20px 57px;
+  }
+}
 
  @media (min-width: 1200px) {
   .task {
@@ -103,7 +115,7 @@
    }
  }
 
- @media (min-width: 1200px) {
+ @media (min-width: 1400px) {
   .task {
     padding: 100px 210px 20px 135px;
   }
