--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,5 @@
+$padding320: 0px 5px 20px 5px;
+$grid320: 300px;
 $logo-width: 68.552px;
 $logo-height: 41.527px;
 $font-size100: 100px;
@@ -5,11 +7,14 @@ $font-size200: 200px;
 $font-size64: 64px;
 $font-size50: 50px;
 $font-size40: 40px;
+$font-size37: 37px;
+$font-size32: 32px;
 $font-size12: 12px;
 $font-size16: 16px;
 $font-size22: 22px;
 $font-size24: 24px;
 $font-size10: 10px;
+$font-size14: 14px;
 $font-size11: 11px;
 $font-size: 14px;
 $font-size200: 200px;
@@ -25,10 +30,15 @@ $colorBorder: #F2F2F2;
 $backg-input-color: #F3F3F3;
 $backg-color-company-about: #FBFBFB;
 $backGroundArrowColor: #F9F9F9;
+$box-shadow: rgba(128, 128, 128, 1);
 $digital-project: rgba(200, 200, 200, 0.50);
 $letterSpacing: 2.4px;
 $letter-spacing-check: 0.42px;
+$border-check: #2A2A2A;
 $button-color-backg: #FFF;
+$check-backg: #F9A43F;
+$footer-back: #2C2C2C;
+$aside-panel-color: grey;
 $line-height-main-task: 36px;
 $line-height: 64px;
 $line-height25: 25px;
@@ -38,3 +48,8 @@ $margin-bottom1200: 90px;
 $border-radius: 0;
 $slide-height: 500px;
 $slide-height1200: 650px;
+$just-content: center;
+$transition: 0.7s all;
+$background-hover: rgba(128, 128, 128, 0.5);
+$background-hover-see: rgba(128, 128, 128, 0.9);
+$background-hover-see-active: rgba(128, 128, 128, 0.7);
