--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -23,12 +23,14 @@
     }
   }
   .nav_header {
+    @include mixins.flex(flex, center, center);
+    flex-direction: column;
     position: fixed;
     left: -50%;
     top: 0;
     width: 50%;
     height: 100%;
-    background-color: grey;
+    background-color: variables.$aside-panel-color;
     transition: 1s all;
     z-index: 5;
     ul {
@@ -42,12 +44,14 @@
   }
 
   .active_nav {
+    @include mixins.flex(flex, center, center);
+    flex-direction: column;
     position: fixed;
     left: 0%;
     top: 0px;
     width: 50%;
     height: 100%;
-    background-color: grey;
+    background-color: variables.$aside-panel-color;
     transition: 1s all;
   }
   
@@ -111,7 +115,7 @@
 
 @media (min-width: 576px) {
   .header {
-    padding: 29.14px 10px 31.33px 10px;
+    padding: 29.14px 5px 31.33px 5px;
     min-height: 102px;
   }
   .wrapper {
@@ -160,7 +164,7 @@
 
 @media (min-width: 992px) {
   .header {
-    padding: 29.14px 35px 31.33px 57px;
+    padding: 29.14px 45px 31.33px 45px;
     min-height: 102px;
   }
   .nav_header {
@@ -172,7 +176,7 @@
 
 @media (min-width: 1200px) {
   .header {
-    padding: 29.14px 32px 31.33px 74px;
+    padding: 29.14px 74px 31.33px 74px;
   }
 
   .wrapper {
@@ -190,7 +194,7 @@
 
 @media (min-width: 1400px) {
   .header {
-    padding: 29.14px 210px 31.33px 135px;
+    padding: 29.14px 78px 31.33px 78px;
   }
 
   .wrapper {
