--- a/components/task/task.module.scss
+++ b/components/task/task.module.scss
@@ -2,7 +2,7 @@
 @use '../../styles/mixins.scss';
 
 .task {
-  padding: 0 5px 20px 5px;;
+  padding: variables.$padding320;
 }
 
 .title {
@@ -23,10 +23,10 @@
 
 .number {
   color: variables.$colorBorder;
-  font-family: SF Pro Display;
+  font-family: 'San Francisco Pro Display Bold';
   font-size: variables.$font-size100;
-  font-style: normal;
-  font-weight: variables.$font-weight900;
+  /* font-style: normal;
+  font-weight: variables.$font-weight900; */
   line-height: normal;
   text-align: center;
  }
@@ -43,9 +43,6 @@
 
 
  @media (min-width: 576px) {
-  .task {
-    padding: 20px 5px 20px 5px;
-  }
   
   .wrapper {
     display: grid;
@@ -58,7 +55,7 @@
 
  @media (min-width: 768px) {
   .task {
-    padding: 40px 20px 20px 20px
+    padding: 20px 20px 20px 20px;
   }
 
   .wrapper {
@@ -77,8 +74,8 @@
   }
 
   .title {
-    text-align: left;
-    margin-bottom: 62px;
+    text-align: center;
+    margin-bottom: 30px;
   }
 
   .number {
@@ -92,16 +89,17 @@
 
 @media(min-width: 992px) {
   .task {
-    padding: 60px 35px 20px 57px;
+    padding: 0px 45px 60px 45px
   }
 }
 
  @media (min-width: 1200px) {
   .task {
-    padding: 120px 35px 20px 74px;
+    padding: 120px 74px 0px 74px;
   }
 
   .title {
+    text-align: left;
     font-size: variables.$font-size64;
   }
 
@@ -117,7 +115,7 @@
 
  @media (min-width: 1400px) {
   .task {
-    padding: 100px 210px 20px 135px;
+    padding: 120px 78px 0px 78px;
   }
 
   .block1 {
