--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,13 @@
+@use '../public/fonts/fonts.scss';
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 .container {
-  width: 1170px;
   margin: 0 auto;
 }
 
@@ -17,32 +19,32 @@
 
 @media (min-width: 576px) {
   .container {
-    min-width: 540px
+    min-width: 540px;
   }
 }
 
 @media (min-width: 768px) {
   .container {
-    min-width: 720px
+    min-width: 720px;
   }
 }
 
 
 @media (min-width: 992px) {
   .container {
-    min-width: 885px
+    min-width: 885px;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    min-width: 1080px
+    width: 1040px;
   }
 }
 
 @media (min-width: 1400px) {
   .container {
-    max-width: 1320px
+    width: 1170px;
   }
 }
 
