--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,4 +1,5 @@
 $padding320: 0px 5px 20px 5px;
+$padding768: 20px 15px 20px 15px;
 $grid320: 300px;
 $logo-width: 68.552px;
 $logo-height: 41.527px;
@@ -10,6 +11,7 @@ $font-size40: 40px;
 $font-size37: 37px;
 $font-size32: 32px;
 $font-size12: 12px;
+$font-size19: 19px;
 $font-size16: 16px;
 $font-size22: 22px;
 $font-size24: 24px;
@@ -53,3 +55,6 @@ $transition: 0.7s all;
 $background-hover: rgba(128, 128, 128, 0.5);
 $background-hover-see: rgba(128, 128, 128, 0.9);
 $background-hover-see-active: rgba(128, 128, 128, 0.7);
+$button-click-link: 28px 44px 28px 45px;
+$button-click-link-slider: 28px 54px 28px 55px;
+$button-click-link-about: 28px 69px 28px 69px;
