--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -95,6 +95,7 @@
     letter-spacing: variables.$letterSpacing;
     text-transform: uppercase;
     text-decoration: none;
+    padding: variables.$button-click-link;
   }
   cursor: pointer;
   margin: 0 auto;
@@ -109,11 +110,11 @@
 
 @media (min-width: 768px) {
   .wrapper_projects {
-    grid-template-columns: 728px;
+    grid-template-columns: 720px;
   }
 
   .projects {
-    padding: 20px 20px 20px 20px;
+    padding: variables.$padding768;
   }
 }
 
@@ -253,4 +254,11 @@
   .wrapper_projects {
     grid-template-columns: 270px 270px 200px 340px;
   }
+}
+
+@media (min-width: 1440px) {
+  .projects {
+    padding: 120px 125px 120px 125px;
+  }
+
 }
