--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -55,6 +55,10 @@ $transition: 0.7s all;
 $background-hover: rgba(128, 128, 128, 0.5);
 $background-hover-see: rgba(128, 128, 128, 0.9);
 $background-hover-see-active: rgba(128, 128, 128, 0.7);
+$insta: #C13584;
+$pinter: #E60023;
+$face: #1877F2;
+$twit: #1DA1F2;
 $button-click-link: 28px 44px 28px 45px;
 $button-click-link-slider: 28px 54px 28px 55px;
 $button-click-link-about: 28px 69px 28px 69px;
